--- a/ionic.project
+++ b/ionic.project
@@ -1,4 +1,11 @@
 {
   "name": "lynda",
-  "app_id": "0da83645"
+  "app_id": "0da83645",
+  "browsers": [
+    {
+      "platform": "android",
+      "browser": "crosswalk",
+      "version": "12.41.296.5"
+    }
+  ]
 }
