--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     {
       "locator": "https://github.com/EddyVerbruggen/Toast-PhoneGap-Plugin.git",
       "id": "nl.x-services.plugins.toast"
-    }
+    },
+    "org.apache.cordova.device"
   ],
   "cordovaPlatforms": [
     "android"
