--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,9 @@
   "name": "HelloIonic",
   "private": "true",
   "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.0.0"
+    "ionic": "driftyco/ionic-bower#1.0.0",
+    "ionic-service-core": "~0.1.10",
+    "ionic-service-analytics": "~0.2.5"
   },
   "dependencies": {
     "moment": "~2.10.3",
