--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
       "locator": "https://github.com/EddyVerbruggen/Toast-PhoneGap-Plugin.git",
       "id": "nl.x-services.plugins.toast"
     },
-    "org.apache.cordova.device"
+    "org.apache.cordova.device",
+    "phonegap-plugin-push"
   ],
   "cordovaPlatforms": [
     "android"
